--- a/ECommerce/Views/Employees/RegisterEmployee.cshtml
+++ b/ECommerce/Views/Employees/RegisterEmployee.cshtml
@@ -34,8 +34,8 @@
                     </div>
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
-                            <label for="Image" class="control-label">Image</label>
-                            <input name="Image" class="form-control input-file" type="file" />
+                            <label for="image" class="control-label">Image</label>
+                            <input name="image" class="form-control input-file" type="file" />
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
