added user message when password reset fails for user

--- a/ECommerce/Views/Employees/ResetPassword.cshtml
+++ b/ECommerce/Views/Employees/ResetPassword.cshtml
@@ -8,8 +8,9 @@
 <div class="container">
     <form asp-action="ResetPassword">
         <input asp-for="UserId" type="hidden"/>
+        <span class="text-danger">@Html.ValidationMessage("ErrorMessage")</span>
         <div class="row m-auto gap-4" style="max-width:500px;">
-        <h2>Reset Password</h2>
+        <h2>Create a new password</h2>
             <div class="col-12">
                 <div class="form-group">
                     <label asp-for="NewPassword" class="control-label">New Password</label>
