created edit get function for employee

--- a/ECommerce/Views/Employees/Edit.cshtml
+++ b/ECommerce/Views/Employees/Edit.cshtml
@@ -15,7 +15,7 @@
         <div class="col-md-4 col-sm-12 left-container">
             <div class="row d-flex h-100 flex-column justify-content-between">
                 <div class="col-12 p-5">
-                    <h2 class="text-center text-primary">Register Employee</h2>
+                    <h2 class="text-center text-primary">Edit Employee</h2>
                 </div>
                 <div class="col-12 p-0">
                     <img class="img-full" src="~/images/website/product-create.jpg" />
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="col-md-8 col-sm-12 right-container p-5">
-            <form asp-action="RegisterEmployee" class="create-form" enctype="multipart/form-data">
+            <form asp-action="Edit" class="create-form" enctype="multipart/form-data">
                 <div class="row g-4">
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
@@ -115,7 +115,7 @@
                     <div class="col-12">
                         <div class="d-flex justify-content-between">
                             <a asp-action="Index" class="btn back-btn">Back to List</a>
-                            <input type="submit" value="Create" class="btn create-btn" />
+                            <input type="submit" value="Save" class="btn create-btn" />
                         </div>
                     </div>
                 </div>
