--- a/ECommerce/Views/Shared/_BusinessLayout.cshtml
+++ b/ECommerce/Views/Shared/_BusinessLayout.cshtml
@@ -36,6 +36,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
                         </li>
+                        @if (User.IsInRole("Business Owner"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Employees" asp-action="Index">Employees</a>
+                            </li>
+                        }
                         <li class="nav-item ">
                             <a class="nav-link text-white" asp-controller="Orders" asp-action="Create">Add Order</a>
                         </li>
