--- a/ECommerce/Views/Employees/Edit.cshtml
+++ b/ECommerce/Views/Employees/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_BusinessLayout.cshtml";
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
 @section Styles
