--- a/ECommerce/Views/Employees/Index.cshtml
+++ b/ECommerce/Views/Employees/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-12">
         <h2 class="text-center">
-            All Products
+            Registered Employees
         </h2>
     </div>
     
