--- a/ECommerce/Views/Employees/ResetPassword.cshtml
+++ b/ECommerce/Views/Employees/ResetPassword.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_BusinessLayout.cshtml";
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Reset Password";
 }
 
 <div class="container">
