improved performance for product queries

--- a/ECommerce/Views/Businesses/Create.cshtml
+++ b/ECommerce/Views/Businesses/Create.cshtml
@@ -13,7 +13,7 @@
         <div class="col-md-4 col-sm-12 left-container">
             <div class="row d-flex h-100 flex-column justify-content-between">
                 <div class="col-12 p-5">
-                    <h2 class="text-center text-primary">Add Product</h2>
+                    <h2 class="text-center text-primary">Add Business</h2>
                 </div>
                 <div class="col-12 p-0">
                     <img class="img-full" src="~/images/website/product-create.jpg" />
