layout links changed

--- a/ECommerce/Views/Shared/_Layout.cshtml
+++ b/ECommerce/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                         ))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="ProductsOnSale">Products</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white" asp-area="" asp-controller="Cart" asp-action="Index">Your Cart</a>
@@ -41,9 +41,6 @@
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="AllProducts">All Products</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Categories" asp-action="AllCategories">All Categories</a>
                             </li>
                             <li class="nav-item ">
                                 <a class="nav-link text-white" asp-controller="Employees" asp-action="AllEmployees">All Employees</a>
