seperated data and migration assembly from project

--- a/ECommerce/Views/BusinessCategories/Index.cshtml
+++ b/ECommerce/Views/BusinessCategories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ECommerce.Models.BusinessCategory>
+﻿@model IEnumerable<BusinessCategory>
 
 @{
     ViewData["Title"] = "Index";
