--- a/ECommerce/Views/Categories/Index.cshtml
+++ b/ECommerce/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ECommerce.Models.Category>
+﻿@model IEnumerable<ECommerce.Data.Models.Category>
 
 @{
     Layout = "~/Views/Shared/_BusinessLayout.cshtml";
