--- a/ECommerce/Views/Products/Create.cshtml
+++ b/ECommerce/Views/Products/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ECommerce.Models.Product;
+﻿@model ECommerce.Data.Models.Product;
 
 @{
     Layout = "~/Views/Shared/_BusinessLayout.cshtml";
