--- a/ECommerce/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/ECommerce/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using ECommerce.Areas.Identity
 @using ECommerce.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using ECommerce.Models
+@using ECommerce.Data.Models
