--- a/ECommerce/Views/Categories/Edit.cshtml
+++ b/ECommerce/Views/Categories/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ECommerce.Models.Category
+﻿@model ECommerce.Data.Models.Category
 
 @{
     Layout = "~/Views/Shared/_BusinessLayout.cshtml";
