corrected authorised roles in category and product index pages

--- a/ECommerce/Views/Categories/Index.cshtml
+++ b/ECommerce/Views/Categories/Index.cshtml
@@ -11,7 +11,7 @@
             All Categories
         </h2>
     </div>
-    @if (User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
+    @if (User.IsInRole("Business Owner") || User.IsInRole("SuperAdmin"))
     {
         <div class="col-12 d-flex justify-content-end">
             <a class="btn primary-btn" asp-action="Create" asp-controller="Categories">Add New</a>
