--- a/ECommerce/Views/Products/ProductsOnSale.cshtml
+++ b/ECommerce/Views/Products/ProductsOnSale.cshtml
@@ -53,9 +53,11 @@
                                 </li>
                             </ul>
                             <div class="row justify-content-around mt-3">
-
-                                <a class="btn btn-success w-75">Add to Cart</a>
-
+                                <form asp-action="AddToCart" asp-controller="Cart">
+                                    <input id="quantity" name="quantity" type="number" />
+                                    <input name="productId" value="@item.Id" type="hidden" />
+                                    <button class="btn btn-success w-75" type="submit">Add to Cart</button>
+                                </form>
                             </div>
                         </div>
                     </div>
